@startuml

class Usuario {
    - id: int
    - nome: string
    - usuario: string
    - senha: string
    - id_escritorio: int

}

class Escritorio {
    - id: int
    - nome: string
    - cnpj: string
    - observacoes: string
}

class acoes_sistema {
    - id: int
    - controller: String
    - method: String
    - description: String
}

class permissoes {
    - id: int
    - id_usuario: int
    - id_acao: int
}

class Caixa {
    - id: int
    - nome: string
    - observacoes: string
    - id_escritorio: int
    - id_usuario_abertura: int
    - id_usuario_fechamento: int
    - data_abertura: datetime
    - data_fechamento: datetime

    + abrirCaixa()
    + fecharCaixa()
    + getCaixas()
}

class Operacao {
    - id: int
    - nome: string
    - observacoes: string
    - valor: float
    - id_caixa: int
    - id_usuario: int
    - data: date
    - data_criacao: datetime
    - tipo: string
    - id_forma_pagamento: int
}

class FormaPagamento {
    - id: int
    - nome: string
    - observacoes: string
    - ativa: boolean
    - id_escritorio: int
}

permissoes "1" -- "0..*" acoes_sistema: Possui
permissoes "0..*" -- "1" Usuario: Possui

Usuario "0..* " -- "1" Escritorio : Trabalha
Usuario "1" -- "0..*" Operacao: Realiza

Escritorio "1" -- "0..*" Caixa: Possui
Caixa "1" -- "0..*" Operacao: Possui

Operacao "0..*" - "1" FormaPagamento: Possui

@enduml